src/errors/examples/auth-error-example.ts
export const AuthErrorExample = {
  wrongCred: {
    statusCode: 401,
    message: 'wrong credential',
    error: 'Unauthorized',
  },
};
